# thermocam-pcb

./: .gitignore  Makefile  README.md  arg-parse.cpp  arg-parse.hpp  config.h.in  crow_all.h  custom_accumulators.hpp  default.nix  file2cpp  heat-sources.cpp  heat-sources.hpp  img_stream.cpp  img_stream.hpp  index.html  libcurl-gnutls-stub.nix  libjpeg.nix  license_163C1908.wlic  meson.build  meson_options.txt  opencv.nix  point-tracking.cpp  point-tracking.hpp  point_tracking.cpp  run.in  script.js  thermo_img.cpp  thermo_img.hpp  thermocam-pcb.cflags  thermocam-pcb.conf  thermocam-pcb.cpp  thermocam-pcb.files  thermocam-pcb.hpp  thermocam-pcb.includes  thermocam-pcb.service  thermocam-pcb.service.in  thermocam-web.html  thermocam.nix  track-test.cpp  track_test.cpp  (+3 more)
.github/workflows/: test.yml
julia/: Manifest.toml  Project.toml  README.md
julia/src/: ThermocamPCB.jl
nix/: sources.json
support/: pre-commit  track-test.cpp
webserver/: thermocam-web.html  thermocam-webserver.cpp
webserver/images/: .gitignore
